--- a/informes/InformeEmpleados.jrxml
+++ b/informes/InformeEmpleados.jrxml
@@ -93,6 +93,9 @@
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4e0fe6f3-ea5b-45ca-ab91-e064aacf2832"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<textElement>
+					<font size="10" isBold="true" isItalic="false"/>
+				</textElement>
 				<text><![CDATA[idEmpleado]]></text>
 			</staticText>
 			<staticText>
@@ -101,6 +104,9 @@
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<textElement>
+					<font isBold="true" isItalic="false"/>
+				</textElement>
 				<text><![CDATA[nombre]]></text>
 			</staticText>
 			<staticText>
@@ -109,93 +115,103 @@
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<textElement>
+					<font isBold="true" isItalic="false"/>
+				</textElement>
 				<text><![CDATA[apellido]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="230" y="0" width="60" height="15" uuid="22efd30a-733d-4002-92b5-5142ce4fb233">
+				<reportElement x="250" y="0" width="60" height="15" uuid="22efd30a-733d-4002-92b5-5142ce4fb233">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d9f0af29-f006-4ba5-893a-d44496f2cacf"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<textElement>
+					<font isBold="true" isItalic="false"/>
+				</textElement>
 				<text><![CDATA[dni]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="300" y="0" width="50" height="15" uuid="d2a96519-e27b-430d-a197-99dab94a4169">
+				<reportElement x="320" y="0" width="50" height="15" uuid="d2a96519-e27b-430d-a197-99dab94a4169">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="44fee6c5-9c50-4b6a-99a4-2c8f91ca682d"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<textElement>
+					<font isBold="true" isItalic="false"/>
+				</textElement>
 				<text><![CDATA[salario]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="370" y="0" width="80" height="15" uuid="bdbefe4f-332d-4e66-b7e0-109108fcbe8d">
+				<reportElement x="390" y="0" width="80" height="15" uuid="bdbefe4f-332d-4e66-b7e0-109108fcbe8d">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="74f000c5-fb66-4785-bab1-e68c973dd641"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<textElement>
+					<font isBold="true" isItalic="false"/>
+				</textElement>
 				<text><![CDATA[fechaAlta]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="460" y="0" width="72" height="15" uuid="83f04047-f577-43e5-85be-3929e9095bae">
+				<reportElement x="481" y="0" width="72" height="15" uuid="83f04047-f577-43e5-85be-3929e9095bae">
 					<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="2be1e883-6f60-48fe-bcf3-dcecd7747621"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
+				<textElement>
+					<font isBold="true" isItalic="false"/>
+				</textElement>
 				<text><![CDATA[idCategoria]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="61" splitType="Stretch">
+		<band height="30" splitType="Stretch">
+			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<frame>
-				<reportElement style="Row" mode="Opaque" x="0" y="0" width="555" height="50" backcolor="#FFFFFF" uuid="b50221b5-8254-440b-8c6f-1f0b138c9259"/>
+				<reportElement style="Row" mode="Opaque" x="0" y="0" width="555" height="30" backcolor="#FFFFFF" uuid="b50221b5-8254-440b-8c6f-1f0b138c9259"/>
 				<textField>
-					<reportElement x="30" y="20" width="33" height="30" uuid="ddbc41fc-b7d5-464c-b7f4-236c8001e77d">
+					<reportElement x="30" y="0" width="33" height="30" uuid="ddbc41fc-b7d5-464c-b7f4-236c8001e77d">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="4e0fe6f3-ea5b-45ca-ab91-e064aacf2832"/>
 						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textFieldExpression><![CDATA[$F{idEmpleado}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="90" y="20" width="67" height="30" uuid="058fe031-fd59-419c-989f-edaed6c83732">
+					<reportElement x="90" y="0" width="67" height="30" uuid="058fe031-fd59-419c-989f-edaed6c83732">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="3d10a97a-7ed4-4978-bd12-4488da0c1b81"/>
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textFieldExpression><![CDATA[$F{nombre}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="160" y="20" width="100" height="30" uuid="ff275d2d-7449-4d52-9352-44182bfb2181">
+					<reportElement x="160" y="0" width="100" height="30" uuid="ff275d2d-7449-4d52-9352-44182bfb2181">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="28ce110d-8d98-4f3f-82e8-5cc06b06d2e9"/>
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textFieldExpression><![CDATA[$F{apellido}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="230" y="20" width="60" height="30" uuid="1eb0cf90-2ca1-4950-9b10-fa253bbd3448">
+					<reportElement x="240" y="0" width="60" height="30" uuid="1eb0cf90-2ca1-4950-9b10-fa253bbd3448">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="d9f0af29-f006-4ba5-893a-d44496f2cacf"/>
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 					</reportElement>
 					<textFieldExpression><![CDATA[$F{dni}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="300" y="20" width="50" height="30" uuid="73565647-4db7-41af-9467-d4b4ffc9ff0d">
+					<reportElement x="320" y="0" width="50" height="30" uuid="73565647-4db7-41af-9467-d4b4ffc9ff0d">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="44fee6c5-9c50-4b6a-99a4-2c8f91ca682d"/>
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textFieldExpression><![CDATA[$F{salario}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="370" y="20" width="80" height="30" uuid="475125ea-e2e6-4856-bcd2-d39ce80b4927">
+					<reportElement x="390" y="0" width="80" height="30" uuid="475125ea-e2e6-4856-bcd2-d39ce80b4927">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="74f000c5-fb66-4785-bab1-e68c973dd641"/>
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textFieldExpression><![CDATA[$F{fechaAlta}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement x="480" y="20" width="72" height="30" uuid="767de852-4d7b-4c96-9060-edb78407cfe4">
+					<reportElement x="504" y="0" width="40" height="30" uuid="767de852-4d7b-4c96-9060-edb78407cfe4">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="2be1e883-6f60-48fe-bcf3-dcecd7747621"/>
-						<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					</reportElement>
 					<textFieldExpression><![CDATA[$F{idCategoria}]]></textFieldExpression>
 				</textField>
@@ -215,23 +231,23 @@
 	<pageFooter>
 		<band height="25" splitType="Stretch">
 			<frame>
-				<reportElement mode="Opaque" x="0" y="1" width="555" height="24" forecolor="#D0B48E" backcolor="#000000" uuid="729c3539-f946-4d0e-a0a7-bda2815ea1b0"/>
+				<reportElement mode="Opaque" x="0" y="1" width="555" height="24" forecolor="#D0B48E" backcolor="#E1F3E1" uuid="729c3539-f946-4d0e-a0a7-bda2815ea1b0"/>
 				<textField evaluationTime="Report">
-					<reportElement style="Column header" x="513" y="0" width="40" height="20" forecolor="#FFFFFF" uuid="4834e99c-7f6c-485a-b098-50e5187f2ab4"/>
+					<reportElement style="Column header" x="513" y="0" width="40" height="20" forecolor="#030101" uuid="4834e99c-7f6c-485a-b098-50e5187f2ab4"/>
 					<textElement verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement style="Column header" x="433" y="0" width="80" height="20" forecolor="#FFFFFF" uuid="9825b46e-76f1-469a-abb8-a1cc27aad685"/>
+					<reportElement style="Column header" x="433" y="0" width="80" height="20" forecolor="#030101" uuid="9825b46e-76f1-469a-abb8-a1cc27aad685"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
 					<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
 				</textField>
 				<textField pattern="EEEEE dd MMMMM yyyy">
-					<reportElement style="Column header" x="2" y="1" width="197" height="20" forecolor="#FFFFFF" uuid="137d38c7-1a83-4fc5-b156-9d5f1b1a0ddc"/>
+					<reportElement style="Column header" x="2" y="1" width="197" height="20" forecolor="#030202" uuid="137d38c7-1a83-4fc5-b156-9d5f1b1a0ddc"/>
 					<textElement verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
